Added instructions popup

--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
 </head>
 
 <body>
+    <div class="instructions">
+        <h2>The Simon Game</h2>
+        <p>Welcome to the Simon Game. <br>Object of the Game: Correctly repeat a longer and longer sequence of signals.</p>
+        <p>(Click anywhere to begin)</p>
+    </div>
     <h1 id="level-title">Press Any Key To Start</h1>
     <div class="container">
         <div class="row">
